--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# Use wildcard "*" to expose all endpoints
+# Can also expose individual endpoints with a comma-delimited list
+
+
 spring.application.name=demo
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+
+# Exclude individual endpoints with a comma-delimited list
+management.endpoints.web.exposure.exclude=health,info
+
+info.app.name=My Super Cool App
+info.app.description=A crazy fun app, yoohoo!
+info.app.version=1.0.0
