--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ management.endpoints.web.exposure.exclude=health,info
 info.app.name=My Super Cool App
 info.app.description=A crazy fun app, yoohoo!
 info.app.version=1.0.0
+
+
+#
+# Defile my properties
+#
+coach.name=Shashikant Solanki
+team.name=Amazon Payments, Bangalore
