--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ info.app.version=1.0.0
 #
 coach.name=Shashikant Solanki
 team.name=Amazon Payments, Bangalore
+
+# Set the context path of the application
+server.servlet.context-path=/cyborg
