--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ team.name=Amazon Payments, Bangalore
 
 # Set the context path of the application
 server.servlet.context-path=/cyborg
+
+# Setting up all beans as lazy for late initialization
+spring.main.lazy-initialization=true
