Bean scopes Singleton & Prototype

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,4 @@ team.name=Amazon Payments, Bangalore
 server.servlet.context-path=/cyborg
 
 # Setting up all beans as lazy for late initialization
-spring.main.lazy-initialization=true
+#spring.main.lazy-initialization=true
