--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,15 @@
 
 
 spring.application.name=demo
-management.endpoints.web.exposure.include=*
-management.info.env.enabled=true
+#management.endpoints.web.exposure.include=*
+#management.info.env.enabled=true
 
 # Exclude individual endpoints with a comma-delimited list
-management.endpoints.web.exposure.exclude=health,info
+#management.endpoints.web.exposure.exclude=health,info
 
-info.app.name=My Super Cool App
-info.app.description=A crazy fun app, yoohoo!
-info.app.version=1.0.0
+#info.app.name=My Super Cool App
+#info.app.description=A crazy fun app, yoohoo!
+#info.app.version=1.0.0
 
 
 #
@@ -21,7 +21,14 @@ coach.name=Shashikant Solanki
 team.name=Amazon Payments, Bangalore
 
 # Set the context path of the application
-server.servlet.context-path=/cyborg
+#server.servlet.context-path=/cyborg
 
 # Setting up all beans as lazy for late initialization
 #spring.main.lazy-initialization=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+# Turn off the spring boot banner
+spring.main.banner-mode=off
