added entity class for mapping fields with DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ spring.datasource.password=springstudent
 
 # Turn off the spring boot banner
 spring.main.banner-mode=off
+
+# Reduce loggin level. Set logging level to warm
+logging.level.root=warn
