added configs for table auto-creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,10 @@ spring.main.banner-mode=off
 
 # Reduce loggin level. Set logging level to warm
 logging.level.root=warn
+
+# Add loggin configs to display SQL statements
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+# Configure JPA/Hibernate to auto create the tables
+spring.jpa.hibernate.ddl-auto=create
